--- a/src/navBar.css
+++ b/src/navBar.css
@@ -1,4 +1,25 @@
-*{
+nav{
+    background-color: black;  
+    text-decoration: none;
+    padding: .3rem;
+    
+  }
+  li{
+    list-style: none;
+    display: inline;
+    padding: 1rem;
+    color:white;
+    font-size: 1.3rem;
+    text-decoration: none;
+  }
+  
+  a{
+    font-size: 2em;
+    text-decoration: none;
+    color:white;
+  }
+
+/* *{
     box-sizing: border-box;
 }
 
@@ -35,4 +56,4 @@ body{
 
 .nav li:hover {
     color: #ED2E8F;
-}
+} */
